[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*", 
    "examples/*",
]

default-members = ["bin/artemis", "bin/cli"]

resolver = "2" # 明确指定使用 resolver = "2" 以适配最新版本

[workspace.dependencies]
## eth
ethers = { version = "2.0.14", features = ["ws", "rustls"]}
ethers-signers = "2.0.14"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

