[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## eth
ethers.workspace = true
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
mev-share = "0.1.4"
ethers-flashbots = { git = "https://github.com/FrankieIsLost/ethers-flashbots", features = ["rustls"] }

## async
async-trait = "0.1.88"
futures = "0.3"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
jsonrpsee = { version = "0.18", features = ["client", "async-client"] }

## misc
anyhow = "1.0.98"
thiserror = "1.0.69"
tracing = "0.1.41"
tower = "0.4.13"
