[package]
name = "mev-share-arb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
ethers = { version = "2.0.14", features = ["ws", "rustls"]}
tokio = { version = "1.45.0", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.88"
artemis-core = { path = "../../crates/artemis-core" }
futures = "0.3.31"
mev-share-uni-arb = { path = "../../crates/strategies/mev-share-uni-arb" }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.37", features = ["derive"] }
