[package]
name = "chainbound-artemis"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/artemis"
readme = "README.md"

[dependencies]
artemis-core = { path = "../../artemis-core" }
ethers = {  version = "2", features = ["ws", "rustls"] }
fiber = { version = "0.8.1", git = "https://github.com/chainbound/fiber-rs" }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1.88"
serde = "1.0.219"
anyhow = "1.0.98"
futures = "0.3.31"
tracing = "0.1.41"
reqwest = "0.12.15"
