[package]
name = "opensea-v2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethers = {  version = "2.0.14", features = ["ws", "rustls"]}
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.219"
thiserror = "2.0.12"

[dev-dependencies]
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
