[package]
name = "mev-share-uni-arb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14", features = ["ws", "rustls"]}
tokio = { version = "1.45.0", features = ["full"] }
mev-share = "0.1.4"
async-trait = "0.1.88"
artemis-core = { path = "../../artemis-core" }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
mev-share-bindings = { path = "./bindings" }




