[package]
name = "opensea-sudo-arb"
version = "0.1.0"
edition = "2021"

[dependencies]

## eth
artemis-core = { path = "../../artemis-core" }
ethers.workspace = true
bindings = { path = "./bindings" }
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
opensea-v2 = { path = "../../clients/opensea-v2" }

## async
async-trait = "0.1.88"

## misc
anyhow = "1.0.98"
tracing = "0.1.41"


